Cleanup (apply 80 character limit, add more comments, clean output).

--- a/covertype-rf-cpp.ipynb
+++ b/covertype-rf-cpp.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,36 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Load the dataset from an online URL.\n",
+    "// Load the dataset that we downloaded.\n",
     "arma::mat dataset;\n",
     "data::Load(\"covertype-small.csv\", dataset);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "// Labels are the last row.\n",
-    "arma::Row<size_t> labels = arma::conv_to<arma::Row<size_t>>::from(dataset.row(dataset.n_rows - 1));\n",
+    "arma::Row<size_t> labels =\n",
+    "    arma::conv_to<arma::Row<size_t>>::from(dataset.row(dataset.n_rows - 1));\n",
     "dataset.shed_row(dataset.n_rows - 1);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arma::mat trainSet, testSet;\n",
-    "arma::Row<size_t> trainLabels, testLabels;\n",
-    "\n",
-    "data::Split(dataset, labels, trainSet, testSet, trainLabels, testLabels, 0.3 /* Percentage of dataset to use for test set. */);"
    ]
   },
   {
@@ -98,7 +87,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RandomForest<> rf(trainSet, trainLabels, 8 /* Number of classes in dataset */, 10 /* 10 trees */);"
+    "arma::mat trainSet, testSet;\n",
+    "arma::Row<size_t> trainLabels, testLabels;\n",
+    "\n",
+    "// Split dataset randomly into training set and test set.\n",
+    "data::Split(dataset, labels, trainSet, testSet, trainLabels, testLabels,\n",
+    "    0.3 /* Percentage of dataset to use for test set. */);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RandomForest<> rf(trainSet, trainLabels, 8 /* Number of classes in dataset */,\n",
+    "    10 /* 10 trees */);"
    ]
   },
   {
@@ -114,21 +118,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24907 correct out of 30000 (83.0233).\n"
+      "24577 correct out of 30000 (81.9233).\n"
      ]
     }
    ],
    "source": [
-    "// Now print the accuracy. The 'probabilities' output could also be used to generate an ROC curve.\n",
+    "// Now print the accuracy. The 'probabilities' output could also be used to\n",
+    "// generate an ROC curve.\n",
     "const size_t correct = arma::accu(output == testLabels);\n",
-    "std::cout << correct << \" correct out of \" << testLabels.n_elem << \" (\" << 100.0 * correct / testLabels.n_elem << \").\" << std::endl;"
+    "std::cout << correct\n",
+    "          << \" correct out of \"\n",
+    "          << testLabels.n_elem << \" (\"\n",
+    "          << 100.0 * correct / testLabels.n_elem\n",
+    "          << \").\" << std::endl;"
    ]
   }
  ],
