--- a/iris-pca-py.ipynb
+++ b/iris-pca-py.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,39 +78,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 2.90803676,  0.13076902],\n",
-       "       [ 2.76491784,  0.30475856],\n",
-       "       [ 2.7461081 , -0.34027983],\n",
-       "       [ 2.29679724, -0.75348469],\n",
-       "       [ 2.83904793,  0.0755604 ],\n",
-       "       [ 2.64423265, -0.17657389],\n",
-       "       [ 2.90682876,  0.56422248],\n",
-       "       [ 2.69199575,  0.10050325],\n",
-       "       [ 2.52354747, -0.65790634]])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.90803676  0.13076902]\n",
+      " [ 2.76491784  0.30475856]\n",
+      " [ 2.7461081  -0.34027983]\n",
+      " [ 2.29679724 -0.75348469]\n",
+      " [ 2.83904793  0.0755604 ]\n",
+      " [ 2.64423265 -0.17657389]\n",
+      " [ 2.90682876  0.56422248]\n",
+      " [ 2.69199575  0.10050325]\n",
+      " [ 2.52354747 -0.65790634]]\n"
+     ]
     }
    ],
    "source": [
     "# Print the first ten columns of the transformed input.\n",
-    "data['output'][1:10]"
+    "print(data['output'][1:10])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
