--- a/covertype-rf-py.ipynb
+++ b/covertype-rf-py.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @file iris-pca-py.ipynb\n",
+    "# @file covertype-rf-py.ipynb\n",
     "#\n",
     "# Classification using Random Forest on the Covertype dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,17 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split the dataset using mlpack. The output comes back as a dictionary, which we'll unpack for clarity of code.\n",
+    "# Split the dataset using mlpack. The output comes back as a dictionary, which\n",
+    "# we'll unpack for clarity of code.\n",
     "output = mlpack.preprocess_split(input=dataset, input_labels=labels, test_ratio=0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,17 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train a random forest.\n",
-    "output = mlpack.random_forest(training=training_set, labels=training_labels, print_training_accuracy=True, num_trees=10, minimum_leaf_size=3)"
+    "output = mlpack.random_forest(training=training_set, labels=training_labels,\n",
+    "    print_training_accuracy=True, num_trees=10, minimum_leaf_size=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,21 +105,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24336 correct out of 30000 (81.12%).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Now print the accuracy. The 'probabilities' output could also be used to generate an ROC curve.\n",
+    "# Now print the accuracy. The 'probabilities' output could also be used to\n",
+    "# generate an ROC curve.\n",
     "correct = np.sum(output['predictions'] == test_labels.flatten())\n",
-    "print(str(correct) + ' correct out of ' + str(len(test_labels)) + ' (' + str(100 * float(correct) / float(len(test_labels))) + '%).')"
+    "print(str(correct) + ' correct out of ' + str(len(test_labels)) +\n",
+    "      ' (' + str(100 * float(correct) / float(len(test_labels))) + '%).')"
    ]
   }
  ],
