--- a/iris_decision_trees/iris_decision_tree.ipynb
+++ b/iris_decision_trees/iris_decision_tree.ipynb
@@ -2,52 +2,123 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include<iostream>\n",
+    "#include <mlpack/prereqs.hpp>\n",
+    "#include<mlpack/methods/decision_tree/decision_tree.hpp>\n",
+    "#include <mlpack/core.hpp>\n",
+    "#include <mlpack/core/data/split_data.hpp>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using namespace std;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using namespace mlpack;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using namespace mlpack::tree;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double RATIO = 0.1;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Labeled dataset that contains data for training is loaded from CSV file,\n",
+    "rows represent features, columns represent data points."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arma::mat dataset;\n",
+    "data::Load(\"iris_data.csv\", dataset, true);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arma::Row<size_t> labels =\n",
+    "    arma::conv_to<arma::Row<size_t>>::from(dataset.row(dataset.n_rows - 1));\n",
+    "dataset.shed_row(dataset.n_rows - 1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arma::mat trainSet, testSet;\n",
+    "arma::Row<size_t> trainLabels, testLabels;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split dataset randomly into training set and test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "IncrementalExecutor::executeFunction: symbol '__emutls_v._ZN4arma23arma_rng_cxx11_instanceE' unresolved while linking function '_GLOBAL__sub_I_cling_module_8'!\n"
+      "IncrementalExecutor::executeFunction: symbol '__emutls_v._ZN4arma23arma_rng_cxx11_instanceE' unresolved while linking [cling interface function]!\n"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
      ]
     }
    ],
    "source": [
-    "#include<iostream>\n",
-    "#include <mlpack/prereqs.hpp>\n",
-    "#include<mlpack/methods/decision_tree/decision_tree.hpp>\n",
-    "#include <mlpack/core.hpp>\n",
-    "#include <mlpack/core/data/split_data.hpp>\n",
-    "using namespace std;\n",
-    "using namespace mlpack;\n",
-    "using namespace mlpack::tree;\n",
-    "\n",
-    "  double RATIO = 0.1;\n",
-    "\t\n",
-    "\t// Labeled dataset that contains data for training is loaded from CSV file,\n",
-    "  // rows represent features, columns represent data points.\n",
-    "  arma::mat dataset;\n",
-    "  data::Load(\"iris_data.csv\", dataset, true);\n",
-    "\n",
-    "arma::Row<size_t> labels =\n",
-    "    arma::conv_to<arma::Row<size_t>>::from(dataset.row(dataset.n_rows - 1));\n",
-    "dataset.shed_row(dataset.n_rows - 1);\n",
-    "\n",
-    "arma::mat trainSet, testSet;\n",
-    "arma::Row<size_t> trainLabels, testLabels;\n",
-    "\n",
-    "// Split dataset randomly into training set and test set.\n",
-    "data::Split(dataset, labels, trainSet, testSet, trainLabels, testLabels,\n",
-    "    0.3 /* Percentage of dataset to use for test set. */);"
+    "data::Split(dataset, labels, trainSet, testSet, trainLabels, testLabels,RATIO);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
