limit lines to 80 chars
limit lines to 80 chars

--- a/lstm_stock_prediction/lstm_multivariate_time_series_prediction.ipynb
+++ b/lstm_stock_prediction/lstm_multivariate_time_series_prediction.ipynb
@@ -164,13 +164,15 @@
    "source": [
     "arma::mat dataset;\n",
     "\n",
-    "// Armadillo is column-major, so each column represents one data point and each row represents one dimension.\n",
+    "// Armadillo is column-major, so each column represents one data point\n",
+    "// and each row represents one dimension.\n",
     "mlpack::data::Load(dataFile, dataset, true);\n",
     "// Visualize the first the rows of the dataset.\n",
     "dataset.submat(1, 0, dataset.n_rows - 1, 3).t().print()\n",
     "// Here each row represents: close, volume, open, high, low.\n",
     "// The 0s in the first row represent the column headers.\n",
-    "// We have printed the transposed dataset since Armadillo represents a data in a column-major format,\n",
+    "// We have printed the transposed dataset since\n",
+    "// Armadillo represents a data in a column-major format,\n",
     "// but we want to print in a row-major format (one data point per row)."
    ]
   },
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -454,9 +456,10 @@
     "// because we did not use it for the training, therefore the prediction result\n",
     "// will be for the day before. In your own application you may of course load\n",
     "// any dataset for prediction.\n",
-    "std::cout << \"The predicted Google stock (high, low) for the last day is: \" << std::endl;\n",
-    "std::cout << \" (\" << flatDataAndPreds(flatDataAndPreds.n_rows - 2, flatDataAndPreds.n_cols - 1) << \", \";\n",
-    "std::cout << flatDataAndPreds(flatDataAndPreds.n_rows - 1, flatDataAndPreds.n_cols - 1) << \")\" << std::endl;"
+    "std::cout << \"The predicted Google stock (high, low) for the last day is: \" << std::endl\n",
+    "    << \" (\" << flatDataAndPreds(flatDataAndPreds.n_rows - 2, flatDataAndPreds.n_cols - 1) << \", \"\n",
+    "    << flatDataAndPreds(flatDataAndPreds.n_rows - 1, flatDataAndPreds.n_cols - 1) << \")\"\n",
+    "    << std::endl;"
    ]
   },
   {
@@ -470,14 +473,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "// Save the model.\n",
     "mlpack::data::Save(modelFile, \"LSTMMulti\", model);\n",
     "// Load the model.\n",
-    "mlpack::ann::RNN<mlpack::ann::MeanSquaredError<>, mlpack::ann::HeInitialization> trainedModel(rho);\n",
+    "RNN<mlpack::ann::MeanSquaredError<>, mlpack::ann::HeInitialization> trainedModel(rho);\n",
     "mlpack::data::Load(modelFile, \"LSTMMulti\", trainedModel);"
    ]
   }
