Minor comment change

--- a/lstm_stock_prediction/lstm_multivariate_time_series_prediction.ipynb
+++ b/lstm_stock_prediction/lstm_multivariate_time_series_prediction.ipynb
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we will use ensmallen callbacks to train the model. We will be using stochastic gradient descent as an optimizer. To stop the training when the loss stops decreasing or doesn't show any improvement."
+    "Here we will use ensmallen callbacks to train the model. We will be using Adam optimizer. We will terminate optimization when the loss stops decreasing or doesn't show any improvement."
    ]
   },
   {
