Update noteboook, used 30 epochs to get training MSE = 0.0006 and validMSE = 0.008

--- a/neural_network_regression/neural_network_regression.ipynb
+++ b/neural_network_regression/neural_network_regression.ipynb
@@ -22,7 +22,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include <mlpack/prereqs.hpp>\n",
     "#include <mlpack/core.hpp>\n",
     "#include <mlpack/methods/ann/loss_functions/mean_squared_error.hpp>\n",
     "#include <mlpack/core/data/scaler_methods/min_max_scaler.hpp>\n",
@@ -82,7 +81,7 @@
    "outputs": [],
    "source": [
     "// Testing data is taken from the dataset in this ratio.\n",
-    "constexpr double RATIO = 0.1; //25%\n",
+    "constexpr double RATIO = 0.1; //10%\n",
     "\n",
     "//! - H1: The number of neurons in the 1st layer.\n",
     "constexpr int H1 = 64;\n",
@@ -91,8 +90,8 @@
     "//! - H3: The number of neurons in the 3rd layer.\n",
     "constexpr int H3 = 64;\n",
     "\n",
-    "// Number of epochs for training.\n",
-    "const int EPOCHS = 300;\n",
+    "// Number of epochs for training. Increase number of epochs for better results.\n",
+    "const int EPOCHS = 30;\n",
     "//! - STEP_SIZE: Step size of the optimizer.\n",
     "constexpr double STEP_SIZE = 5e-2;\n",
     "//! - BATCH_SIZE: Number of data points in each iteration of SGD.\n",
@@ -168,17 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IncrementalExecutor::executeFunction: symbol '__emutls_v._ZN4arma23arma_rng_cxx11_instanceE' unresolved while linking function '_GLOBAL__sub_I_cling_module_14'!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// Split the dataset into training and validation sets.\n",
     "arma::mat trainData, validData;\n",
@@ -194,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,11 +201,19 @@
     "arma::mat validY = validData.row(0);\n",
     "\n",
     "// Scale all data into the range (0, 1) for increased numerical stability.\n",
-    "data::MinMaxScaler scale;\n",
+    "data::MinMaxScaler scaleX;\n",
+    "// Scaler for predictions.\n",
+    "data::MinMaxScaler scaleY;\n",
+    "\n",
     "// Fit scaler only on training data.\n",
-    "scale.Fit(trainX);\n",
-    "scale.Transform(trainX, trainX);\n",
-    "scale.Transform(validX, validX);"
+    "scaleX.Fit(trainX);\n",
+    "scaleX.Transform(trainX, trainX);\n",
+    "scaleX.Transform(validX, validX);\n",
+    "\n",
+    "// Scale training predictions.\n",
+    "scaleY.Fit(trainY);\n",
+    "scaleY.Transform(trainY, trainY);\n",
+    "scaleY.Transform(validY, validY);"
    ]
   },
   {
@@ -222,12 +221,12 @@
    "metadata": {},
    "source": [
     "### 5. Create the Model\n",
-    "Specifying the NN model."
+    "Specifying the neural network model. The model consists of 3 hidden linear layers and uses LeakyReLU as activation function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,6 +234,7 @@
     "// data and the next LeakyReLU layer.\n",
     "// Parameters specify the number of input features and number of\n",
     "// neurons in the next layer.\n",
+    "FFN<MeanSquaredError<>, HeInitialization> model;\n",
     "model.Add<Linear<>>(trainX.n_rows, H1);\n",
     "// Activation layer:\n",
     "model.Add<LeakyReLU<>>();\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,9 +285,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/852\n",
+      "0.179052\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.179052\n",
+      "Epoch 2/852\n",
+      "0.00513052\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00513052\n",
+      "Epoch 3/852\n",
+      "0.00688234\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00688234\n",
+      "Epoch 4/852\n",
+      "0.00184822\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00184822\n",
+      "Epoch 5/852\n",
+      "0.00105378\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00105378\n",
+      "Epoch 6/852\n",
+      "0.000750528\n",
+      "8/8 [==================================================] 100% - 0s 7ms/step - loss: 0.000750528\n",
+      "Epoch 7/852\n",
+      "0.000693577\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000693577\n",
+      "Epoch 8/852\n",
+      "0.000746652\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000746652\n",
+      "Epoch 9/852\n",
+      "0.00066746\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00066746\n",
+      "Epoch 10/852\n",
+      "0.000884704\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000884704\n",
+      "Epoch 11/852\n",
+      "0.000699084\n",
+      "8/8 [==================================================] 100% - 0s 7ms/step - loss: 0.000699084\n",
+      "Epoch 12/852\n",
+      "0.000637509\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000637509\n",
+      "Epoch 13/852\n",
+      "0.00060156\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.00060156\n",
+      "Epoch 14/852\n",
+      "0.000661983\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000661983\n",
+      "Epoch 15/852\n",
+      "0.000570786\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000570786\n",
+      "Epoch 16/852\n",
+      "0.000579697\n",
+      "8/8 [==================================================] 100% - 0s 8ms/step - loss: 0.000579697\n",
+      "Epoch 17/852\n",
+      "0.000596221\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000596221\n",
+      "Epoch 18/852\n",
+      "0.000496033\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000496033\n",
+      "Epoch 19/852\n",
+      "0.000527568\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000527568\n",
+      "Epoch 20/852\n",
+      "0.000487463\n",
+      "8/8 [==================================================] 100% - 0s 7ms/step - loss: 0.000487463\n",
+      "Epoch 21/852\n",
+      "0.000618489\n",
+      "8/8 [==================================================] 100% - 0s 2ms/step - loss: 0.000618489\n",
+      "Epoch 22/852\n",
+      "0.00055465\n",
+      "8/8 [==================================================] 100% - 0s 2ms/step - loss: 0.00055465\n",
+      "Epoch 23/852\n",
+      "0.000483989\n",
+      "8/8 [==================================================] 100% - 0s 8ms/step - loss: 0.000483989\n",
+      "Epoch 24/852\n",
+      "0.000473512\n",
+      "8/8 [==================================================] 100% - 0s 2ms/step - loss: 0.000473512\n",
+      "Epoch 25/852\n",
+      "0.000593794\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000593794\n",
+      "Epoch 26/852\n",
+      "0.000458153\n",
+      "8/8 [==================================================] 100% - 0s 8ms/step - loss: 0.000458153\n",
+      "Epoch 27/852\n",
+      "0.000379911\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000379911\n",
+      "Epoch 28/852\n",
+      "0.000441901\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000441901\n",
+      "Epoch 29/852\n",
+      "0.000400578\n",
+      "8/8 [==================================================] 100% - 0s 1ms/step - loss: 0.000400578\n",
+      "Epoch 30/852\n",
+      "0.000323442\n",
+      "8/8 [==================================================] 100% - 0s 7ms/step - loss: 0.000323442\n"
+     ]
+    }
+   ],
    "source": [
     "// Train the model.\n",
     "model.Train(trainX,\n",
@@ -314,17 +411,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error on Prediction data points: 0.0087528\n"
+     ]
+    }
+   ],
    "source": [
     "// Create predictions on the dataset.\n",
     "arma::mat predOut;\n",
-    "modelP.Predict(validX, predOut);\n",
+    "model.Predict(validX, predOut);\n",
     "\n",
     "// Calculate MSE loss on predictions.\n",
     "double validMSE = metric::SquaredEuclideanDistance::Evaluate(predOut, validY) / (validY.n_elem);\n",
-    "std::cout << \"Mean Squared Error on Prediction data points: \" << validMSE << std::endl;"
+    "std::cout << \"Mean Squared Error on Prediction data points: \" << validMSE << std::endl;\n",
+    "\n",
+    "// Get meanigful prediction by inverse - scaling on predictions.\n",
+    "scaleY.InverseTransform(predOut, predOut);"
    ]
   },
   {
@@ -347,13 +455,6 @@
     "// Load weights into the model.\n",
     "data::Load(modelFile, \"NNRegressor\", modelP);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
