added suggested changes in indentation

--- a/q_learning/cartpole_dqn.ipynb
+++ b/q_learning/cartpole_dqn.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This notebook shows how to get started with training reinforcement learning agents, particularly DQN agents, using mlpack. Here, we train a [Simple DQN](https://www.cs.toronto.edu/~vmnih/docs/dqn.pdf) agent to get high scores for the [CartPole](https://gym.openai.com/envs/CartPole-v0) environment. \n",
     "\n",
-    "Mlpack contains non-gui implementations of some of OpenAI gym's environments. In this notebook, we use one such environment for training the agent, as it is fast to train on.\n",
+    "mlpack contains non-gui implementations of some of OpenAI gym's environments. In this notebook, we use one such environment for training the agent, as it is fast to train on.\n",
     "\n",
     "As for testing, we make the agent run on OpenAI Gym toolkit's GUI interface provided through a distributed infrastructure (TCP API). A video of the trained agent can be seen in the end."
    ]
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Used to run the agent on gym's environment (provided externally) for testing\n",
+    "// Used to run the agent on gym's environment (provided externally) for testing.\n",
     "#include <gym/environment.hpp>"
    ]
   },
@@ -155,8 +155,8 @@
    "source": [
     "// Set up DQN agent.\n",
     "QLearning<CartPole, decltype(model), AdamUpdate, decltype(policy)>\n",
-    "  agent(std::move(config), std::move(model), std::move(policy),\n",
-    "  std::move(replayMethod));"
+    "    agent(std::move(config), std::move(model), std::move(policy),\n",
+    "    std::move(replayMethod));"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Initializing training variables\n",
+    "// Initializing training variables.\n",
     "arma::running_stat<double> averageReturn;\n",
     "size_t episodes = 0;"
    ]
@@ -183,37 +183,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Function to train the agent on mlpack's own implementation of the CartPole environment:\n",
-    "void train(int threshold)\n",
+    "// Function to train the agent on mlpack's own implementation of the CartPole environment.\n",
+    "void train(const size_t threshold)\n",
     "{\n",
-    "  agent.Deterministic() = false;\n",
-    "  while (true)\n",
+    "    agent.Deterministic() = false;\n",
+    "    while (true)\n",
     "    {\n",
     "        double episodeReturn = agent.Episode();\n",
     "        averageReturn(episodeReturn);\n",
     "        episodes += 1;\n",
     "\n",
     "        if(episodes % 10 == 0)\n",
+    "        {\n",
     "            std::cout << \"Average return: \" << averageReturn.mean()\n",
     "                << \"\\t Episode return: \" << episodeReturn \n",
     "                << \"\\t Episode number: \" << episodes << std::endl;\n",
+    "        }\n",
     "\n",
     "        if (episodes > 1000)\n",
     "        {\n",
-    "          std::cout << \"Cart Pole with DQN failed.\" << std::endl;\n",
-    "          break;\n",
+    "            std::cout << \"Cart Pole with DQN failed.\" << std::endl;\n",
+    "            break;\n",
     "        }\n",
     "\n",
     "        if (averageReturn.mean() > threshold)\n",
     "        {\n",
-    "          agent.Deterministic() = true;\n",
-    "          arma::running_stat<double> testReturn;\n",
-    "          for (size_t i = 0; i < 10; ++i)\n",
+    "            agent.Deterministic() = true;\n",
+    "            arma::running_stat<double> testReturn;\n",
+    "            for (size_t i = 0; i < 10; ++i)\n",
     "            testReturn(agent.Episode());\n",
     "\n",
-    "          std::cout << \"Average return in deterministic test: \"\n",
+    "            std::cout << \"Average return in deterministic test: \"\n",
     "              << testReturn.mean() << std::endl;\n",
-    "          break;\n",
+    "            break;\n",
     "        }\n",
     "    }\n",
     "}"
@@ -235,14 +237,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average return: 23.6\t Episode return: 18\t Episode number: 10\n",
-      "Average return in deterministic test: 8.4\n"
+      "Average return: 19.3\t Episode return: 24\t Episode number: 10\n",
+      "Average return: 20.15\t Episode return: 44\t Episode number: 20\n",
+      "Average return: 20.8667\t Episode return: 10\t Episode number: 30\n",
+      "Average return: 21.8\t Episode return: 47\t Episode number: 40\n",
+      "Average return in deterministic test: 129.5\n"
      ]
     }
    ],
    "source": [
-    "// Training the agent till average return reaches 30\n",
-    "train(30)"
+    "// Training the agent till average return reaches 25.\n",
+    "train(25)"
    ]
   },
   {
@@ -261,13 +266,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Total steps: 10\t Total reward: 10\n"
+      " Total steps: 140\t Total reward: 140\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e854bd28064412eb4fcb5c8c30982ee",
+       "model_id": "7203e3f80bde47ad96291fab705fd7cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -291,20 +296,19 @@
     "env.reset();\n",
     "env.render();\n",
     "\n",
-    "// Initializing variables\n",
     "double totalReward = 0;\n",
     "size_t totalSteps = 0;\n",
     "\n",
-    "// Testing the agent on gym's environment\n",
+    "// Testing the agent on gym's environment.\n",
     "while (1)\n",
-    "  {\n",
-    "    // State from the environment is passed to the agent's internal representation\n",
+    "{\n",
+    "    // State from the environment is passed to the agent's internal representation.\n",
     "    agent.State().Data() = env.observation;\n",
     "\n",
-    "    // with the given state, the agent performs an action according to its defined policy\n",
+    "    // With the given state, the agent performs an action according to its defined policy.\n",
     "    agent.Step();\n",
     "\n",
-    "    // Action to take, decided by the policy\n",
+    "    // Action to take, decided by the policy.\n",
     "    arma::mat action = {double(agent.Action())};\n",
     "\n",
     "    env.step(action);\n",
@@ -313,15 +317,15 @@
     "\n",
     "    if (env.done)\n",
     "    {\n",
-    "      std::cout << \" Total steps: \" << totalSteps << \"\\t Total reward: \"\n",
-    "        << totalReward << std::endl;\n",
-    "      break;\n",
+    "        std::cout << \" Total steps: \" << totalSteps << \"\\t Total reward: \"\n",
+    "            << totalReward << std::endl;\n",
+    "        break;\n",
     "    }\n",
-    "    \n",
-    "    // Uncomment the following lines to see the reward and action in each step\n",
+    "\n",
+    "    // Uncomment the following lines to see the reward and action in each step.\n",
     "    // std::cout << \" Current step: \" << totalSteps << \"\\t current reward: \"\n",
     "    //   << totalReward << \"\\t Action taken: \" << action;\n",
-    "  }\n",
+    "}\n",
     "\n",
     "env.close();\n",
     "std::string url = env.url();\n",
@@ -346,15 +350,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average return: 30.5\t Episode return: 15\t Episode number: 20\n",
-      "Average return: 50.0333\t Episode return: 200\t Episode number: 30\n",
-      "Average return in deterministic test: 126.8\n"
+      "Average return: 40.66\t Episode return: 161\t Episode number: 50\n",
+      "Average return: 57.25\t Episode return: 141\t Episode number: 60\n",
+      "Average return: 73.2\t Episode return: 200\t Episode number: 70\n",
+      "Average return: 74.125\t Episode return: 105\t Episode number: 80\n",
+      "Average return in deterministic test: 157.7\n"
      ]
     }
    ],
    "source": [
     "// Training the same agent till average return reaches 60\n",
-    "train(60)"
+    "train(75)"
    ]
   },
   {
@@ -366,32 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Total steps: 127\t Total reward: 127\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e08f3b00913b41a2905c463175eb550d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "// TESTING BLOCK\n",
     "\n",
@@ -403,20 +386,19 @@
     "env.reset();\n",
     "env.render();\n",
     "\n",
-    "// Initializing variables\n",
     "double totalReward = 0;\n",
     "size_t totalSteps = 0;\n",
     "\n",
-    "// Testing the agent on gym's environment\n",
+    "// Testing the agent on gym's environment.\n",
     "while (1)\n",
-    "  {\n",
-    "    // State from the environment is passed to the agent's internal representation\n",
+    "{\n",
+    "    // State from the environment is passed to the agent's internal representation.\n",
     "    agent.State().Data() = env.observation;\n",
     "\n",
-    "    // with the given state, the agent performs an action according to its defined policy\n",
+    "    // With the given state, the agent performs an action according to its defined policy.\n",
     "    agent.Step();\n",
     "\n",
-    "    // Action to take, decided by the policy\n",
+    "    // Action to take, decided by the policy.\n",
     "    arma::mat action = {double(agent.Action())};\n",
     "\n",
     "    env.step(action);\n",
@@ -425,15 +407,15 @@
     "\n",
     "    if (env.done)\n",
     "    {\n",
-    "      std::cout << \" Total steps: \" << totalSteps << \"\\t Total reward: \"\n",
-    "        << totalReward << std::endl;\n",
-    "      break;\n",
+    "        std::cout << \" Total steps: \" << totalSteps << \"\\t Total reward: \"\n",
+    "            << totalReward << std::endl;\n",
+    "        break;\n",
     "    }\n",
-    "    \n",
-    "    // Uncomment the following lines to see the reward and action in each step\n",
+    "\n",
+    "    // Uncomment the following lines to see the reward and action in each step.\n",
     "    // std::cout << \" Current step: \" << totalSteps << \"\\t current reward: \"\n",
     "    //   << totalReward << \"\\t Action taken: \" << action;\n",
-    "  }\n",
+    "}\n",
     "\n",
     "env.close();\n",
     "std::string url = env.url();\n",
