--- a/q_learning/cartpole_dqn.ipynb
+++ b/q_learning/cartpole_dqn.ipynb
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let the training begin:"
+    "## Let the training begin"
    ]
   },
   {
